# text_analyser_api

./: README.md  main.py  pyproject.toml  replit_zip_error_log.txt  requirements.txt
.cache/replit/: __replit_disk_meta.json
.upm/: store.json
core/: core.py  knn.py
